external-crates/move/crates/move-compiler/tests/development/enums/matching/invalid_at.exp
error[E01002]: unexpected token
  ┌─ tests/development/enums/matching/invalid_at.move:9:13
  │
9 │             _ @ Option::Some(128u8) => (),
  │             ^ Cannot use '_' as a binder in an '@' pattern

